--- a/app/views/flight/calendar.html.erb
+++ b/app/views/flight/calendar.html.erb
@@ -11,7 +11,7 @@
   <ul id="dr" class="reset">
     <li>
       <div class="tapable schedtaps left" id="dd">
-        <h4>Depart <span class="icon dep"></span></h4>
+        <h4>Depart</h4>
         <div class="left fullwidth">
           <div id="departDetails" class="hidden"></div>
           <%- if session[:depart] 
@@ -27,7 +27,7 @@
     </li>
     <li>
       <div class="schedtaps left" id="rd">
-        <h4>Return <span class="icon ret"></span></h4>
+        <h4>Return</h4>
         <div class="left fullwidth">
           <div id="returnDetails" class="hidden"></div>
           <%- if session[:return] 
