--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -13,12 +13,12 @@
       <li><a href="#">Multi-City</a></li>
     </ul>
     <div id="toFrom">
-      <div class="floatLeft width99">
-        <div class="lbl floatLeft">
+      <div class="left fullwidth">
+        <div class="lbl left">
           <h4>From</h4>
           <%= link_to (session[:origin])? session[:origin] : "Origin", (search_flight_index_path(:q => "from")), :id => "#{((session[:origin].blank?)? "origin_airport" : "session_origin"  )}", :class => "fromLink" %>
         </div>
-        <div class="lbl floatRight">
+        <div class="lbl right">
           <h4>To</h4>
           <%= link_to (session[:dest])? session[:dest] : "Destination", (search_flight_index_path(:q => "to")), :id => "#{((session[:dest].blank?)? "dest_airport" : "session_dest"  )}", :class => "toLink" %>
         </div>
@@ -33,7 +33,7 @@
               <h4>Depart</h4>
               <div id="departDetails" class="left fullwidth">
                 <%- if session[:depart] 
-                    d = Date.new(session[:depart].split("/")[2].to_i, session[:depart].split("/")[0].to_i, session[:depart].split("/")[1].to_i) -%>
+                  d = Date.new(session[:depart].split("/")[2].to_i, session[:depart].split("/")[0].to_i, session[:depart].split("/")[1].to_i) -%>
                   <div id="dpDate" class="halfw left"><%= d.strftime("%b")%><br /><%= d.strftime("%Y")%></div>
                   <div id="dpDay" class="halfw left"><%= d.strftime("%d")%></div>
                 <%- else %>
