--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -12,7 +12,7 @@
       <li><a href="#" class="current">Return</a></li>
       <li><a href="#">Multi-City</a></li>
     </ul>
-    <div id="toFrom">
+    <div id="toFrom" class="left">
       <div class="left fullwidth">
         <div class="lbl left">
           <h4>From</h4>
