--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
   <%= stylesheet_link_tag "style" %>
   <%= stylesheet_link_tag "jquery.ui.custom" %>
   <%= stylesheet_link_tag "custom" %>
+  <%= stylesheet_link_tag "custom800" %>
   <%= csrf_meta_tags %>
 
 
