--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -5,7 +5,8 @@
     <div id="crumb"></div>
   </div>
 <%- end -%>
-
+<div id="flightWrap">
+  <div id="flight">
   <div class="left contentWrap">
     <ul id="flightNav">
       <li><a href="#">One Way</a></li>
@@ -97,3 +98,5 @@
   </div>
   <ul id="search_#{params[:q]}_list"></ul>
 
+  </div>
+</div>
