--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -26,11 +26,19 @@
               </div>
             </a>
           </div>
-        
-        <a href="<%= search_flight_index_path(:q => 'to')%>">
+      
           <div class="lbl right">
             <h4>To</h4>
-            <%= link_to raw((session[:dest])? "#{session[:dest][-4..-2]}<br />#{session[:dest].split(",")[0]}" : "Destination"), (search_flight_index_path(:q => "to")), :id => "#{((session[:dest].blank?)? "dest_airport" : "session_dest"  )}", :class => "toLink" %>
+            <a href="<%= search_flight_index_path(:q => 'to') %>" id="<%= (session[:dest].blank?)? "dest_airport" : "session_dest" %>">
+              <div>
+                <%- if session[:origin] -%>
+                  <span><%= session[:origin][-4..-2] %></span>
+                  <span><%= session[:origin].split(",")[0] %></span>
+                <%- else -%>
+                  <span>Choose your destination</span>
+                <%- end -%>
+              </div>
+            </a>
           </div>
         </a>
       </div>
