--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -19,7 +19,7 @@
               <div>
                 <%- if session[:origin] -%>
                   <span><%= session[:origin][-4..-2] %></span>
-                  <span><%= session[:origin].split(",")[0] %></span>
+                  <span><%= session[:origin][0..-6]%></span>
                 <%- else -%>
                   <span>Choose your origin</span>
                 <%- end -%>
@@ -31,9 +31,9 @@
             <h4>To</h4>
             <a href="<%= search_flight_index_path(:q => 'to') %>" id="<%= (session[:dest].blank?)? "dest_airport" : "session_dest" %>">
               <div>
-                <%- if session[:origin] -%>
-                  <span><%= session[:origin][-4..-2] %></span>
-                  <span><%= session[:origin].split(",")[0] %></span>
+                <%- if session[:dest] -%>
+                  <span><%= session[:dest][-4..-2] %></span>
+                  <span><%= session[:dest][0..-6] %></span>
                 <%- else -%>
                   <span>Choose your destination</span>
                 <%- end -%>
