--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -185,8 +185,9 @@ only screen and (min-device-pixel-ratio: 1.5) {
 #toFrom div div a.toLink {
   background:transparent url("fromTo.png") -155px 0 no-repeat;
 }
-#toFrom div div h4 {
+#toFrom h4 {
   margin: 0;
+  padding: 0;
   font-size:13px;
 }
 #toFrom ul li span {
@@ -290,7 +291,6 @@ only screen and (min-device-pixel-ratio: 1.5) {
 .half {width:281px;}
 .floatLeft {float:left;}
 .floatRight {float:right;}
-.lbl {font-size:16px;font-weight:bold;width:50%;}
 .width99 {width:99%;}
 
 .submitList {
@@ -354,6 +354,54 @@ h2#findFlights {
 #searchResults {
   margin:1em auto;
 }
+
+/* Find Flights Origin and Destination Styles */
+#ffOrig, #ffDest {
+  height:56px;
+  width:148px;
+  display:block;
+}
+#ffOrig {
+  background:transparent url("fromTo.png") no-repeat;
+}
+
+/* Passengers Styles */
+.tacenter {text-align:center;}
+#passengerWrap h4 {
+  margin:0.25em 0;
+  padding:0;
+}
+#passengerOpts {
+  height:64px;
+  background:transparent url("passengerBG.jpg") repeat-x;
+  border-left:1px solid #a0a3a4;
+  border-top:1px solid #8c8c8c;
+  border-right:1px solid #babdbc;
+  border-radius:5px;
+  -moz-box-shadow: inset 0 0 5px #aaa;
+  -webkit-box-shadow: inset 0 0 5px#aaa;
+  box-shadow: inner 0 0 5px #aaa;
+}
+.sselect select {
+  background:transparent;
+  margin-top:18px;
+  border:none;
+  height:28px;
+  font-size:16px;
+  overflow:hidden;
+}
+.sselect span {
+  height:28px;
+  width:20px;
+  display:block;
+  margin-top:18px;
+  margin-left:35px;
+  float:left;
+}
+.adult {
+  background: transparent url("passengers.jpg") no-repeat;
+}
+
 /* Calendar Hacks */
 span.icon {
   height:17px;
