--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -13,31 +13,31 @@
     </ul>
     <div id="toFrom" class="left">
       <div class="left fullwidth">
-          <div class="lbl left">
+          <div class="halfw left">
             <h4>From</h4>
             <a href="<%= search_flight_index_path(:q => 'from') %>" id="<%= (session[:origin].blank?)? "origin_airport" : "session_origin" %>">
-              <div>
+              <span class="fullwidth" id="ffOrig">
                 <%- if session[:origin] -%>
                   <span><%= session[:origin][-4..-2] %></span>
                   <span><%= session[:origin].split(",")[0] %></span>
                 <%- else -%>
                   <span>Choose your origin</span>
                 <%- end -%>
-              </div>
+              </span>
             </a>
           </div>
       
-          <div class="lbl right">
+          <div class="halfw left">
             <h4>To</h4>
             <a href="<%= search_flight_index_path(:q => 'to') %>" id="<%= (session[:dest].blank?)? "dest_airport" : "session_dest" %>">
-              <div>
+              <span class="fullwidth" id="ffDest">
                 <%- if session[:origin] -%>
                   <span><%= session[:origin][-4..-2] %></span>
                   <span><%= session[:origin].split(",")[0] %></span>
                 <%- else -%>
                   <span>Choose your destination</span>
                 <%- end -%>
-              </div>
+              </span>
             </a>
           </div>
         </a>
@@ -80,33 +80,30 @@
         </ul>
       </a>
   </div>
-  <div class="left contentWrap">
-      <h4>Passengers</h4>
-      <%= form_tag(flight_index_path, :method => :post) do %>
-        <div class="thirds left">
+  <div id="passengerWrap" class="left contentWrap">
+    <h4>Passengers</h4>
+    <%= form_tag(flight_index_path, :method => :post) do %>
+      <div id="passengerOpts">
+        <div class="thirds left sselect tacenter">
+          <span class="adult"></span>
           <%= select_tag "adults", options_for_select(%w(1 2 3 4 5 6 7 8 9 10), session[:adults]) %>
-          <br />
-          Adults
         </div>
-        <div class="thirds left">
+        <div class="thirds left sselect tacenter child">
           <%= select_tag "child", options_for_select(%w(0 1 2 3 4 5 6 7 8 9 10), session[:child]) %>
-          <br />
-          Children
         </div>
-        <div class="thirds left">
+        <div class="thirds left sselect tacenter infant">
           <%= select_tag "infants", options_for_select(%w(0 1 2 3 4 5 6 7 8 9 10), session[:infants]) %>
-          <br />
-          Infants
         </div>
-        <div id="searchFLight" class="floatLeft width99">
-          <h4>Search by</h4>
-          <ul class="submitList">
-            <li class="halfw"><%= submit_tag "Find Exact Date Flights", :id => "lowestFares" %></li>
-            <li class="halfw"><%= submit_tag "Find Flexible Date Flights", :id => "exactDates" %></li>
-          </ul>
-        </div>
-      <%- end -%>
-    </div>
+      </div>
+      <div id="searchFLight" class="floatLeft width99">
+        <h4>Search by</h4>
+        <ul class="submitList">
+          <li class="halfw"><%= submit_tag "Find Exact Date Flights", :id => "lowestFares" %></li>
+          <li class="halfw"><%= submit_tag "Find Flexible Date Flights", :id => "exactDates" %></li>
+        </ul>
+      </div>
+    <%- end -%>
+  </div>
   <div class="floatLeft">
     <%- if session[:flight] %>
       <%- session[:flight].each do |flight| %>
