--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -18,10 +18,11 @@
             <a href="<%= search_flight_index_path(:q => 'from') %>" id="<%= (session[:origin].blank?)? "origin_airport" : "session_origin" %>">
               <span class="fullwidth" id="ffOrig">
                 <%- if session[:origin] -%>
-                  <span><%= session[:origin][-4..-2] %></span>
-                  <span><%= session[:origin][0..-6]%></span>
+                  <span id="origin_short"><%= session[:origin][-4..-2] %></span>
+                  <span id="origin_city"><%= session[:origin][0..-6]%></span>
                 <%- else -%>
-                  <span>Choose your origin</span>
+                  <span id="origin_short"></span>
+                  <span id="origin_city">Choose your origin</span>
                 <%- end -%>
               </span>
             </a>
@@ -32,10 +33,11 @@
             <a href="<%= search_flight_index_path(:q => 'to') %>" id="<%= (session[:dest].blank?)? "dest_airport" : "session_dest" %>">
               <div>
                 <%- if session[:dest] -%>
-                  <span><%= session[:dest][-4..-2] %></span>
-                  <span><%= session[:dest][0..-6] %></span>
+                  <span id="dest_short"><%= session[:dest][-4..-2] %></span>
+                  <span id="dest_city"><%= session[:dest][0..-6] %></span>
                 <%- else -%>
-                  <span>Choose your destination</span>
+                  <span id="dest_short"></span>
+                  <span id="dest_city">Choose your destination</span>
                 <%- end -%>
               </span>
             </a>
