--- a/app/assets/stylesheets/jquery.ui.custom.css
+++ b/app/assets/stylesheets/jquery.ui.custom.css
@@ -24,7 +24,9 @@
 
 /* Interaction Cues
 ----------------------------------*/
-.ui-state-disabled { cursor: default !important; }
+.ui-state-disabled { 
+  cursor: default !important; 
+}
 
 
 /* Icons
@@ -59,24 +61,40 @@
 .ui-widget { font-family: Verdana,Arial,sans-serif; font-size: 1.1em; }
 .ui-widget .ui-widget { font-size: 1em; }
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Verdana,Arial,sans-serif; font-size: 1em; }
-.ui-widget-content { border: 1px solid #aaaaaa; background: #ffffff url(images/ui-bg_flat_75_ffffff_40x100.png) 50% 50% repeat-x; color: #222222; }
+.ui-widget-content { background: #ffffff url(images/ui-bg_flat_75_ffffff_40x100.png) 50% 50% repeat-x; color: #222222; }
 .ui-widget-content a { color: #222222; }
-.ui-widget-header { border: 1px solid #aaaaaa; background: #cccccc url(images/ui-bg_highlight-soft_75_cccccc_1x100.png) 50% 50% repeat-x; color: #222222; font-weight: bold; }
+.ui-widget-header { 50% 50% repeat-x; color: #ffffff; font-weight: bold; background-color: #383838; }
 .ui-widget-header a { color: #222222; }
 
 /* Interaction states
 ----------------------------------*/
-.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { border: 1px solid #d3d3d3; background: #e6e6e6 url(images/ui-bg_glass_75_e6e6e6_1x400.png) 50% 50% repeat-x; font-weight: normal; color: #555555; }
-.ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #555555; text-decoration: none; }
-.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { border: 1px solid #999999; background: #dadada url(images/ui-bg_glass_75_dadada_1x400.png) 50% 50% repeat-x; font-weight: normal; color: #212121; }
-.ui-state-hover a, .ui-state-hover a:hover { color: #212121; text-decoration: none; }
-.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 1px solid #aaaaaa; background: #ffffff url(images/ui-bg_glass_65_ffffff_1x400.png) 50% 50% repeat-x; font-weight: normal; color: #212121; }
-.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: #212121; text-decoration: none; }
-.ui-widget :active { outline: none; }
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { 
+  background: #dedede 50% 50% repeat-x; font-weight: normal; color: #555555; 
+}
+.ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited {
+  color: #555555; text-decoration: none; 
+}
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
+  background: #ababab repeat-x; font-weight: normal; color: #212121; 
+}
+.ui-state-highlight:hover, .ui-widget-content .ui-state-highlight:hover, .ui-widget-header .ui-state-highlight:hover,
+.ui-state-hover a, .ui-state-hover a:hover 
+{
+  color: #212121; text-decoration: none; 
+}
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
+  background: #a9a9a9 50% 50% repeat-x; font-weight: normal; color: #212121; 
+}
+.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited {
+  color: #212121; text-decoration: none; 
+}
+.ui-widget :active {
+  outline: none;
+}
 
 /* Interaction Cues
 ----------------------------------*/
-.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight  {border: 1px solid #fcefa1; background: #fbf9ee url(images/ui-bg_glass_55_fbf9ee_1x400.png) 50% 50% repeat-x; color: #363636; }
+.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight  { background: #efefef; color: #555555; }
 .ui-state-highlight a, .ui-widget-content .ui-state-highlight a,.ui-widget-header .ui-state-highlight a { color: #363636; }
 .ui-state-error, .ui-widget-content .ui-state-error, .ui-widget-header .ui-state-error {border: 1px solid #cd0a0a; background: #fef1ec url(images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x; color: #cd0a0a; }
 .ui-state-error a, .ui-widget-content .ui-state-error a, .ui-widget-header .ui-state-error a { color: #cd0a0a; }
@@ -279,12 +297,12 @@
 /* Misc visuals
 ----------------------------------*/
 
-/* Corner radius */
+/* Corner radius 
 .ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; -khtml-border-top-left-radius: 4px; border-top-left-radius: 4px; }
 .ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr { -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; -khtml-border-top-right-radius: 4px; border-top-right-radius: 4px; }
 .ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl { -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-left-radius: 4px; -khtml-border-bottom-left-radius: 4px; border-bottom-left-radius: 4px; }
 .ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br { -moz-border-radius-bottomright: 4px; -webkit-border-bottom-right-radius: 4px; -khtml-border-bottom-right-radius: 4px; border-bottom-right-radius: 4px; }
-
+*/
 /* Overlays */
 .ui-widget-overlay { background: #aaaaaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x; opacity: .30;filter:Alpha(Opacity=30); }
 .ui-widget-shadow { margin: -8px 0 0 -8px; padding: 8px; background: #aaaaaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x; opacity: .30;filter:Alpha(Opacity=30); -moz-border-radius: 8px; -khtml-border-radius: 8px; -webkit-border-radius: 8px; border-radius: 8px; }/*
@@ -349,7 +367,7 @@
  *
  * http://docs.jquery.com/UI/Datepicker#theming
  */
-.ui-datepicker { width: 17em; padding: .2em .2em 0; display: none; }
+.ui-datepicker { width: 90%; padding: .2em .2em 0; display: none; }
 .ui-datepicker .ui-datepicker-header { position:relative; padding:.2em 0; }
 .ui-datepicker .ui-datepicker-prev, .ui-datepicker .ui-datepicker-next { position:absolute; top: 2px; width: 1.8em; height: 1.8em; }
 .ui-datepicker .ui-datepicker-prev-hover, .ui-datepicker .ui-datepicker-next-hover { top: 1px; }
@@ -407,4 +425,62 @@
     left: -4px; /*must have*/
     width: 200px; /*must have*/
     height: 200px; /*must have*/
+}
+
+table.ui-datepicker-calendar thead {
+  background-color: #f2f2f2;
+}
+
+table.ui-datepicker-calendar thead tr th {
+  color: #666666;
+}
+
+table.ui-datepicker-calendar tbody tr td {
+  width: 8%;
+  height: 32px;
+}
+
+table.ui-datepicker-calendar tbody tr td a,
+table.ui-datepicker-calendar tbody tr td span
+{
+  display: block;
+  text-align: center;
+  width: auto;
+  height: inherit;
+  line-height: 32px;
+  font-weight: bold !important;
+  text-shadow: 1px 1px #efefef;
+}
+
+.ui-state-disabled span {
+  background-image: linear-gradient(bottom, rgb(194,194,194) 20%, rgb(228,228,228) 61%, rgb(236,236,236) 72%);
+  background-image: -o-linear-gradient(bottom, rgb(194,194,194) 20%, rgb(228,228,228) 61%, rgb(236,236,236) 72%);
+  background-image: -moz-linear-gradient(bottom, rgb(194,194,194) 20%, rgb(228,228,228) 61%, rgb(236,236,236) 72%);
+  background-image: -webkit-linear-gradient(bottom, rgb(194,194,194) 20%, rgb(228,228,228) 61%, rgb(236,236,236) 72%);
+  background-image: -ms-linear-gradient(bottom, rgb(194,194,194) 20%, rgb(228,228,228) 61%, rgb(236,236,236) 72%);
+
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0.2, rgb(194,194,194)),
+    color-stop(0.61, rgb(228,228,228)),
+    color-stop(0.72, rgb(236,236,236))
+  ) !important;
+}
+
+.ui-state-default {
+  background-image: linear-gradient(bottom, rgb(150,150,150) 0%, rgb(204,204,204) 100%);
+  background-image: -o-linear-gradient(bottom, rgb(150,150,150) 0%, rgb(204,204,204) 100%);
+  background-image: -moz-linear-gradient(bottom, rgb(150,150,150) 0%, rgb(204,204,204) 100%);
+  background-image: -webkit-linear-gradient(bottom, rgb(150,150,150) 0%, rgb(204,204,204) 100%);
+  background-image: -ms-linear-gradient(bottom, rgb(150,150,150) 0%, rgb(204,204,204) 100%);
+
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0, rgb(150,150,150)),
+    color-stop(1, rgb(204,204,204))
+  ) !important;
 }
