--- a/app/views/flight/search.html.erb
+++ b/app/views/flight/search.html.erb
@@ -1,11 +1,13 @@
 <%- content_for :header do -%>
   <div id="findFlights">
-      <%= form_tag(flight_index_path, :method => :post, :id => "flightForm") do %>
+      
         <span id="searchFieldGroup">
           <strong><%= "#{(params[:q] == "from")? "From" : "To" }" %></strong>
           <%= text_field_tag params[:q], "", :id => "search_#{params[:q]}", :class => "searchField", :placeholder => "Type a city or Airport Code" %>
           <span id="clearSearch"><span class="hidden">Clear Search</span></span>
         </span>
+      <%= form_tag(flight_index_path, :method => :post, :id => "flightForm") do %>
+        <%= hidden_field_tag params[:q], "", :id => "search_#{params[:q]}_hidden" %>
       <%- end -%>
     <a href="/flight" class="doneBtn">Done</a>
   </div>
