--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -389,24 +389,37 @@ h2#findFlights {
 
 /* Passengers Styles */
 .tacenter {text-align:center;}
+h4.wtborder {
+  border-top:1px solid #ededed;
+  margin-top:4px;
+}
 #passengerWrap h4 {
   margin:0.25em 0;
   padding:0;
 }
 #passengerOpts {
-  height:64px;
+  height:58px;
   background:transparent url("passengerBG.jpg") repeat-x;
   border-left:1px solid #a0a3a4;
   border-top:1px solid #8c8c8c;
   border-right:1px solid #babdbc;
   border-radius:5px;
-  -moz-box-shadow: inset 0 0 5px #aaa;
-  -webkit-box-shadow: inset 0 0 5px#aaa;
-  box-shadow: inner 0 0 5px #aaa;
+  -moz-box-shadow: inset 0 0 3px #aaa;
+  -webkit-box-shadow: inset 0 0 3px#aaa;
+  box-shadow: inner 0 0 3px #aaa;
+}
+#passengerLbls {
+  height:15px;
+  font-size:10px;
+  color:#7b7b7b;
+  border-bottom:1px solid #ededed;
+}
+.sselect {
+  height:58px;
 }
 .sselect select {
   background:transparent;
-  margin-top:18px;
+  margin-top:15px;
   border:none;
   height:28px;
   font-size:16px;
@@ -416,12 +429,21 @@ h2#findFlights {
   height:28px;
   width:20px;
   display:block;
-  margin-top:18px;
-  margin-left:35px;
+  margin-top:15px;
+  margin-left:25px;
   float:left;
 }
 .adult {
   background: transparent url("passengers.jpg") no-repeat;
+}
+.child {
+  background: transparent url("passengers.jpg") -20px 0 no-repeat;
+}
+.infant {
+  background: transparent url("passengers.jpg") -40px 0 no-repeat;
+}
+.wdiv {
+  background: transparent url("passengerDiv.jpg") no-repeat top right;
 }
 
 /* Calendar Hacks */
@@ -445,8 +467,8 @@ span.ret {
   margin-bottom:2em;
 }
 .contentWrap {
-  width:90.5%;
-  margin:1em 5%;
+  width:96%;
+  margin:1em 2%;
   border-radius: 5px;
   float:left;  
 }
@@ -470,7 +492,8 @@ span.ret {
   padding:5px;
   width:90%;
 }
-.thirds {width:32%;}
+.thirds {width:33%;}
+.thirdsP {width:34%;}
 a#calLink {
   text-decoration:none;
   color:#000;
