--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -81,19 +81,26 @@
       </a>
   </div>
   <div id="passengerWrap" class="left contentWrap">
-    <h4>Passengers</h4>
+    <h4 class="wtborder">Passengers</h4>
     <%= form_tag(flight_index_path, :method => :post) do %>
       <div id="passengerOpts">
-        <div class="thirds left sselect tacenter">
+        <div class="thirdsP left sselect tacenter wdiv">
           <span class="adult"></span>
           <%= select_tag "adults", options_for_select(%w(1 2 3 4 5 6 7 8 9 10), session[:adults]) %>
         </div>
-        <div class="thirds left sselect tacenter child">
+        <div class="thirds left sselect tacenter wdiv">
+          <span class="child"></span>
           <%= select_tag "child", options_for_select(%w(0 1 2 3 4 5 6 7 8 9 10), session[:child]) %>
         </div>
-        <div class="thirds left sselect tacenter infant">
+        <div class="thirds left sselect tacenter">
+          <span class="infant"></span>
           <%= select_tag "infants", options_for_select(%w(0 1 2 3 4 5 6 7 8 9 10), session[:infants]) %>
         </div>
+      </div>
+      <div id="passengerLbls">
+        <div class="thirdsP left tacenter">Adult</div>
+        <div class="thirds left tacenter">2-11 years</div>
+        <div class="thirds left tacenter">< 2 years</div>
       </div>
       <div id="searchFLight" class="floatLeft width99">
         <h4>Search by</h4>
