--- a/app/views/flight/search.html.erb
+++ b/app/views/flight/search.html.erb
@@ -19,23 +19,8 @@
   </div>
 </div>
 
-
+<%- if session[:origin].blank? %>
 <div class="grayBg searchResults">Airports nearest to your current location</div>
-  <ul id="searchResultUl">
-    <li class="lightGrayBg bold borderBottom">
-      <a href="#">Melbourne All Airports</a>
-    </li>
-    <li class="lightGrayBg bold borderBottom">
-      <a href="#">
-        Melbourne, Tullamarine
-        <span class="right normal upper normal">mel</span>
-      </a>
-    </li>
-    <li class="lightGrayBg bold">
-      <a href="#">
-        Melbourne, Avalon
-        <span class="right normal upper normal">avv</span>
-      </a>
-    </li>
-  </ul>
+  <ul id="searchResultUl"></ul>
 </div>
+<%- end -%>
