--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -152,62 +152,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
   margin-top:14px;
   width:95%;
 }
-#toFrom {
-  margin-top:10px;
-  width:95%;
-}
-#toFrom ul {
-  width:100%;
-  float:left;
-  margin:0;
-  padding:0;
-}
 
-#toFrom ul li {
-  display:inline;
-  height:124px;
-  float:left;
-}
-
-#toFrom div div a {
-  width: 145px;
-  height: 36px;
-  display: block;
-  color:#000;
-  text-decoration: none;
-  display: block;
-  padding: 10px;
-  font-size: 15px;
-}
-#toFrom div div a.fromLink {
-  background:transparent url("fromTo.png") no-repeat bottom left;
-}
-#toFrom div div a.toLink {
-  background:transparent url("fromTo.png") -155px 0 no-repeat;
-}
-#toFrom h4 {
-  margin: 0;
-  padding: 0;
-  font-size:13px;
-}
-#toFrom ul li span {
-  width:250px;
-  padding-left:30px;
-  margin-top:30px;
-}
-#toFrom ul li span.locAbbr {
-  font-size:45px;
-  font-weight:bold;
-  display:block;
-}
-#toFrom ul li span.locFull {
-  font-size:16px;
-  line-height:16px;
-}
-#toFrom ul li.toDest span.locAbbr, #toFrom ul li.toDest span.locFull {
-  width:260px;
-  padding-left:40px;
-}
 #findFlightsSec {
   width:95%;
   margin:1em auto;
@@ -378,13 +323,30 @@ h2#findFlights {
 }
 
 /* Find Flights Origin and Destination Styles */
+#toFrom a {
+  text-decoration:none;
+  color:#000;
+}
+#toFrom h4.tfhead {
+  margin:1em 0 0.25em 0;
+}
 #ffOrig, #ffDest {
-  height:56px;
-  width:148px;
+  height:51px;
+  width:138px;
   display:block;
 }
 #ffOrig {
   background:transparent url("fromTo.png") no-repeat;
+  padding-left:10px;
+  padding-top:5px;
+}
+span#origin_short {
+  font-size:25px;
+  font-weight:bold;
+  display:block;
+}
+span#origin_city {
+  font-size:12px;
 }
 
 /* Passengers Styles */
