--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -12,36 +12,33 @@
       <li><a href="#">Multi-City</a></li>
     </ul>
     <div id="toFrom" class="left">
-      <div class="left fullwidth">
-          <div class="halfw left">
-            <h4>From</h4>
-            <a href="<%= search_flight_index_path(:q => 'from') %>" id="<%= (session[:origin].blank?)? "origin_airport" : "session_origin" %>">
-              <span class="fullwidth" id="ffOrig">
-                <%- if session[:origin] -%>
-                  <span id="origin_short"><%= session[:origin][-4..-2] %></span>
-                  <span id="origin_city"><%= session[:origin][0..-6]%></span>
-                <%- else -%>
-                  <span id="origin_short"></span>
-                  <span id="origin_city">Choose your origin</span>
-                <%- end -%>
-              </span>
-            </a>
-          </div>
-      
-          <div class="halfw left">
-            <h4>To</h4>
-            <a href="<%= search_flight_index_path(:q => 'to') %>" id="<%= (session[:dest].blank?)? "dest_airport" : "session_dest" %>">
-              <div>
-                <%- if session[:dest] -%>
-                  <span id="dest_short"><%= session[:dest][-4..-2] %></span>
-                  <span id="dest_city"><%= session[:dest][0..-6] %></span>
-                <%- else -%>
-                  <span id="dest_short"></span>
-                  <span id="dest_city">Choose your destination</span>
-                <%- end -%>
-              </span>
-            </a>
-          </div>
+      <div class="halfw left">
+        <h4 class="reset tfhead">From</h4>
+        <a href="<%= search_flight_index_path(:q => 'from') %>" id="<%= (session[:origin].blank?)? "origin_airport" : "session_origin" %>">
+          <span class="fullwidth reset left" id="ffOrig">
+            <%- if session[:origin] -%>
+              <span id="origin_short"><%= session[:origin][-4..-2] %></span>
+              <span id="origin_city"><%= session[:origin][0..-6]%></span>
+            <%- else -%>
+              <span id="origin_short"></span>
+              <span id="origin_city">Choose your origin</span>
+            <%- end -%>
+          </span>
+        </a>
+      </div>
+  
+      <div class="halfw left">
+        <h4 class="reset tfhead">To</h4>
+        <a href="<%= search_flight_index_path(:q => 'to') %>" id="<%= (session[:dest].blank?)? "dest_airport" : "session_dest" %>">
+          <div>
+            <%- if session[:dest] -%>
+              <span id="dest_short"><%= session[:dest][-4..-2] %></span>
+              <span id="dest_city"><%= session[:dest][0..-6] %></span>
+            <%- else -%>
+              <span id="dest_short"></span>
+              <span id="dest_city">Choose your destination</span>
+            <%- end -%>
+          </span>
         </a>
       </div>
     </div>
