--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -330,6 +330,9 @@ h2#findFlights {
 #toFrom h4.tfhead {
   margin:1em 0 0.25em 0;
 }
+#toFrom h4.tfto {
+  margin:1em 0 0.25em 1em;
+}
 #ffOrig, #ffDest {
   height:51px;
   width:138px;
@@ -340,12 +343,20 @@ h2#findFlights {
   padding-left:10px;
   padding-top:5px;
 }
-span#origin_short {
+#ffDest {
+  background:transparent url("fromTo.png") -148px 0 no-repeat;
+  width:128px;
+  height:51px;
+  padding-left:20px;
+  padding-top:5px;
+}
+span#origin_short, span#dest_short {
   font-size:25px;
   font-weight:bold;
   display:block;
+  text-shadow: 1px 1px 1px #fff;
 }
-span#origin_city {
+span#origin_city, span#dest_city {
   font-size:12px;
 }
 
