--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -28,9 +28,9 @@
       </div>
   
       <div class="halfw left">
-        <h4 class="reset tfhead">To</h4>
+        <h4 class="reset tfhead tfto">To</h4>
         <a href="<%= search_flight_index_path(:q => 'to') %>" id="<%= (session[:dest].blank?)? "dest_airport" : "session_dest" %>">
-          <div>
+          <span class="fullwidth reset left" id="ffDest">
             <%- if session[:dest] -%>
               <span id="dest_short"><%= session[:dest][-4..-2] %></span>
               <span id="dest_city"><%= session[:dest][0..-6] %></span>
