--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -263,11 +263,11 @@ only screen and (min-device-pixel-ratio: 1.5) {
   margin:0 auto;
 }
 .search header { height:85px; }
-#main #searchResultUl ul {
+#main #searchResultUl ul, ul.ui-autocomplete {
   margin:0;
   padding:0;
 }
-.searchResults, #searchResultUl li {
+.searchResults, #searchResultUl li, ul.ui-autocomplete li {
   margin-bottom:2px;
   font-size:14px;
   padding:15px 18px;
@@ -281,6 +281,11 @@ only screen and (min-device-pixel-ratio: 1.5) {
   color:black;
   text-decoration:none;
 }
+ul.ui-autocomplete li {
+  font-weight:bold;
+  background-color:#e9e9e9;
+  border-bottom:solid 1px #c4c4c4;
+}
 .lightGrayBg { background-color:#e9e9e9; }
 .grayBg {background-color:#9E9E9E;}
 .borderBottom { border-bottom:solid 1px #c4c4c4; }
@@ -288,7 +293,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
 .bold {font-weight:bold;}
 .right {float:right;}
 .width70 {width:70%;}
-
+/*
 .ui-autocomplete {
   top: 50px !important;
   border: none !important;
@@ -311,7 +316,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
   width: 90% !important;
   margin:0 !important;
 }
-
+*/
 #searchesHeader {
   background-color: #E7E7E7;
   float: left;
@@ -359,11 +364,11 @@ only screen and (min-device-pixel-ratio: 1.5) {
 .resultTitle {
   font-size:15px;
   color:white;
-  background:url("icons2.jpg") no-repeat;
+  background:url("icons2.png") no-repeat;
   padding-left:30px;
 }
 .return {
-  background:url("icons2.jpg") 0 -18px no-repeat !important;
+  background:url("icons2.png") 0 -18px no-repeat !important;
 }
 .returnGray {
   background-color: #4B4B4B;
@@ -664,7 +669,7 @@ a#calLink {
   }
 
     .searchField {
-      padding: 7px 28px 7px 6px;
+      padding: 10px 28px 7px 6px;
       border: 1px solid #f85720;
       border-radius: 6px;
       -webkit-border-radius: 6px;
