--- a/app/assets/stylesheets/jquery.ui.custom.css
+++ b/app/assets/stylesheets/jquery.ui.custom.css
@@ -373,7 +373,8 @@
  *
  * http://docs.jquery.com/UI/Datepicker#theming
  */
-.ui-datepicker { width: 90%; padding: .2em .2em 0; display: none; }
+/*.ui-datepicker { width: 90%; padding: .2em .2em 0; display: none; }*/
+.ui-datepicker {  width:96%; margin:1em 2%; display: none;}
 .ui-datepicker .ui-datepicker-header { position:relative; padding:.2em 0; }
 .ui-datepicker .ui-datepicker-prev, .ui-datepicker .ui-datepicker-next { margin-top: 5px; position: absolute; top: 2px; width: 1.8em; height: 1em; }
 .ui-datepicker .ui-datepicker-prev-hover, .ui-datepicker .ui-datepicker-next-hover { top: 1px; }
