--- a/app/views/flight/calendar.html.erb
+++ b/app/views/flight/calendar.html.erb
@@ -16,11 +16,11 @@
           <div id="departDetails" class="hidden"></div>
           <%- if session[:depart] 
               d = Date.new(session[:depart].split("/")[2].to_i, session[:depart].split("/")[0].to_i, session[:depart].split("/")[1].to_i) -%>
-            <div id="dpDate" class="halfw left"><%= d.strftime("%A")%><br /><%= d.strftime("%b")%></div>
-            <div id="dpDay" class="halfw left"><%= d.strftime("%d")%></div>
+            <div id="dpDate" class="halfi left"><%= d.strftime("%A")%><br /><%= d.strftime("%b")%></div>
+            <div id="dpDay" class="halfi left"><%= d.strftime("%d")%></div>
           <%- else %>
-            <div id="dpDate" class="halfw left"><%= Date.today.strftime("%A")%><br/><%= Date.today.strftime("%b")%></div>
-            <div id="dpDay" class="halfw left"><%= Date.today.strftime("%d")%></div>
+            <div id="dpDate" class="halfi left"><%= Date.today.strftime("%A")%><br/><%= Date.today.strftime("%b")%></div>
+            <div id="dpDay" class="halfi left"><%= Date.today.strftime("%d")%></div>
           <%- end %>
         </div>
       </div>
@@ -32,11 +32,11 @@
           <div id="returnDetails" class="hidden"></div>
           <%- if session[:return] 
               d = Date.new(session[:return].split("/")[2].to_i, session[:return].split("/")[0].to_i, session[:return].split("/")[1].to_i) -%>
-            <div id="rpDate" class="halfw left"><%= d.strftime("%A")%><br /><%= d.strftime("%b")%></div>
-            <div id="rpDay" class="halfw left"><%= d.strftime("%d")%></div>
+            <div id="rpDate" class="halfi left"><%= d.strftime("%A")%><br /><%= d.strftime("%b")%></div>
+            <div id="rpDay" class="halfi left"><%= d.strftime("%d")%></div>
           <%- else %>
-            <div id="rpDate" class="halfw left"><%= Date.today.strftime("%A")%><br/><%= Date.today.strftime("%b")%></div>
-            <div id="rpDay" class="halfw left"><%= Date.today.strftime("%d")%></div>
+            <div id="rpDate" class="halfi left"><%= Date.today.strftime("%A")%><br/><%= Date.today.strftime("%b")%></div>
+            <div id="rpDay" class="halfi left"><%= Date.today.strftime("%d")%></div>
           <%- end %>
         </div>
       </div>
