--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -27,7 +27,7 @@
         </a>
       </div>
   
-      <div class="halfw left">
+      <div class="halfw right">
         <h4 class="reset tfhead tfto">To</h4>
         <a href="<%= search_flight_index_path(:q => 'to') %>" id="<%= (session[:dest].blank?)? "dest_airport" : "session_dest" %>">
           <span class="fullwidth reset left" id="ffDest">
