--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -11,8 +11,45 @@ only screen and (min-device-pixel-ratio: 1.5) {
   
 }
 
-@media only screen and (max-device-width: 480px) {
-	#container {
-	  
-	}
-}
+/*@media only screen and (max-device-width: 480px) {*/
+  header {
+    background: transparent url("headBG.jpg") repeat-x;
+    height:56px;
+  }
+  #back {
+    position:absolute;
+    z-index:10;
+    top:5px;
+    left:5px;
+  }
+  a#backBtn {
+    background: transparent url("homeBtn.jpg") no-repeat;
+    height:32px;
+    width:28px;
+    display:block;
+    text-indent:-9999px;
+  }
+  #midHeader {
+    background: transparent url("headMark.jpg") no-repeat;
+    width: 110px;
+    height: 56px;
+    margin: 0 auto;
+    position: relative;
+    top: -15px;
+    text-align: center;
+  }
+  #midHeader h2 {
+    color: white;
+    padding-top: 10px;
+    font-family: Arial;
+    margin: 0 auto;
+  }
+  #crumb {
+    position:absolute;
+    right:10px;
+    top:0px;
+  }
+  #crumb h3 {
+    color:white;
+  }
+/*}*/
