add header buttons and footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,9 @@
   <body>
     <div id="container">
       <header>
+        <a href="#" class="cancelBtn">Cancel</a>
         <%= yield :header %>
+        <a href="#" class="doneBtn">Done</a>
       </header>
       <div id="main" role="main">
         <%= yield %>
