--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -51,6 +51,69 @@ only screen and (min-device-pixel-ratio: 1.5) {
   #crumb h3 {
     color:white;
   }
+  footer {
+    width: 100%;
+    height:52px;
+    margin: 0 auto;
+    background-color:#000000;
+    border-bottom:1px solid #666;
+    height:51px;
+  }
+  footer nav {
+    text-align:center;
+    padding-top: 3px;
+  }
+  footer nav ul {
+    width: 480px;
+    display: inline-block;
+    height: 36px;
+  }
+  footer nav ul li {
+    text-align: center;
+    width:105px;
+    float:left;
+    display: block;
+  }
+  footer nav ul li a, footer nav ul li a:visited {
+    padding: 12px 10px;
+    height: 12px;
+    background-color: #383838;
+    color: white;
+    text-decoration: none;
+    display: block;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    font-size: 11px;
+  }
+  footer #copyright {
+    width:100%;
+    text-align:center;
+    font-size:12px;
+    color:#bebebe;
+  }
+  .withGap {margin-right:10px;}
+  .cancelBtn {
+    background: url("cancelBtn.jpg") no-repeat;
+    width:59px;
+    height:34px;
+    position:absolute;
+    z-index:20;
+    top:5px;
+    left:5px;
+    line-height: 0;
+    text-indent: -9999px;
+  }
+  .doneBtn {
+    background: url("doneBtn.jpg") no-repeat;
+    width:59px;
+    height:34px;
+    position:absolute;
+    z-index:20;
+    top:5px;
+    right:5px;
+    line-height: 0;
+    text-indent: -9999px;
+  }
 }
 
 h2#findFlights {
